WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311415
Fix event.target not being set after dispatching in shadow tree with no listeners
https://bugs.webkit.org/show_bug.cgi?id=311415
Summary
Fix event.target not being set after dispatching in shadow tree with no liste...
Chris Dumez
Reported
2026-04-03 07:22:47 PDT
Fix event.target not being set after dispatching in shadow tree with no listeners.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-03 07:24:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61977
Chris Dumez
Comment 2
2026-04-05 05:48:25 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58995
Chris Dumez
Comment 3
2026-04-05 18:20:13 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58998
EWS
Comment 4
2026-04-05 20:19:04 PDT
Committed
310621@main
(6029b693424e): <
https://commits.webkit.org/310621@main
> Reviewed commits have been landed. Closing PR #61977 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2026-04-05 20:20:15 PDT
<
rdar://problem/174136382
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug