Fix event.target not being set after dispatching in shadow tree with no listeners https://bugs.webkit.org/show_bug.cgi?id=311415

Reviewed by Anne van Kesteren.

When dispatching an event on a node inside a shadow tree and there are
no event listeners for that event type in the document, the early-exit
path in EventDispatcher::dispatchEvent failed to call resetBeforeDispatch()
and setTarget(). This left event.target stale (or null) instead of being
set to the retargeted shadow host.

The fix uses the retargeted target from the outermost EventPath context,
which correctly reflects the target after shadow DOM retargeting.

Test: imported/w3c/web-platform-tests/shadow-dom/event-post-dispatch-no-listeners.html

* LayoutTests/imported/w3c/web-platform-tests/shadow-dom/event-post-dispatch-no-listeners-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/shadow-dom/event-post-dispatch-no-listeners.html: Added.
* Source/WebCore/dom/EventDispatcher.cpp:
(WebCore::EventDispatcher::dispatchEvent):
* Source/WebCore/dom/EventPath.h:
(WebCore::EventPath::last const):
(WebCore::EventPath::last):

Canonical link: https://commits.webkit.org/310621@main